<resources>
    <string name="app_name">Distributing Data</string>
    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_results">No Results Value</string>
    <string name="loading">Loading...</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, eu cum velit elitr, antiopam similique ut est. No reque latine fuisset sea. Sit homero splendide honestatis ut, ex purto persequeris qui. Eu veri homero numquam nec, eos sonet aliquid et. Ea purto suavitate contentiones eam, ancillae pericula sententiae eos ad, utinam viderer vis ex. Ignota indoctum ocurreret te vix, commodo pericula adolescens ea sit. Ut usu cetero latine. Percipitur assueverit vix at. Mea dolor erroribus vituperata eu. Ad sea quas copiosae imperdiet, justo minim tantas quo in. Et prima laboramus dissentias eos, summo latine phaedrum ei has. Ei autem ignota erroribus eam, mentitum interpretaris mel ei. Mei ut stet justo indoctum, pro nostro pericula cu. Modus fastidii reprimique et vel, amet tation postulant ne quo, at his sale voluptaria. An est suscipit scaevola. Sed pericula contentiones ex, te nostro fuisset assentior nec. Principes percipitur ut vis, eu tempor civibus mei. Graeci pertinacia interpretaris vim ad, summo inermis ut vix. Saepe altera moderatius cum no. Officiis recusabo facilisis ad qui, his latine constituto ad. In mea volumus efficiendi. Usu fierent iracundia no, tantas primis ex cum. Prima consetetur at qui, cu euripidis argumentum nec, te mei aliquip civibus delicatissimi. Vel deleniti vulputate tincidunt id, ubique putant option ea eum. No velit elitr argumentum per, nostrum appareat deserunt no vel.</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher:</string>
    <string name="url">URL</string>
    <string name="category">Genre:</string>
    <string name="action_reset">Reset</string>
</resources>