<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ModelDetailPage">

        <TextView
            android:id="@+id/book_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/book_title" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_title_text"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@id/book_author"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/book_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_image"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/publisher"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/book_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_publisher"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_category"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/lorem_ipsum"
            android:textAlignment="viewStart" />
    </RelativeLayout>

</ScrollView>