<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/book_image_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name"
        app:srcCompat="@android:drawable/gallery_thumb" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/book_title"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#dddddd" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/titleText"
        android:layout_marginTop="4dp"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="#dddddd" />
</RelativeLayout>